# ECE414_Examples_LafayetteCollege

./: .gitignore  LICENSE  README.md  SECURITY.md
LED3_FSM/: CMakeLists.txt  LED3_FSM.c  timer.c
SQLED_fsm/: CMakeLists.txt  SQLED_fsm.c  led_out.h
adc_demo/: CMakeLists.txt  adc_demo.c
blink2/: CMakeLists.txt  blink2.c
dac_demo/: CMakeLists.txt  dac4822.h  dac_demo.c
dac_demo/kicad/Untitled/: Untitled.kicad_pro  Untitled.kicad_sch
dds_demo/: CMakeLists.txt  dac4822.c  dds.c  dds.h  dds_demo.c
debounce_sw1/: CMakeLists.txt  debounce_sw1.c  debounce_sw1.h  debounce_sw1_demo.c  led25_out.c  led25_out.h  sw_in.c  sw_in.h  timer.c
gpio_demo/: CMakeLists.txt  gpio_demo.c
ic_intr_demo/: CMakeLists.txt  ic.c  ic.h  ic_demo.c  timer.c
ic_pio_demo/: CMakeLists.txt  ic.h  ic_demo.c  ic_pio.c  ic_pio.pio  pio_input_capture_2a.h
kicad/: README.md
kicad/2478/: 2478.kicad_sym  ADAFRUIT_2478.kicad_mod
pwm_demo/: CMakeLists.txt  pwm_demo.c  pwm_pin.c  pwm_pin.h
repeating_timer_example/: zTimer.c  zTimer.h
rpt_timer_demo/: CMakeLists.txt  README.md  ztimer.c  ztimer.h  ztimer_demo.c
rtc_demo/: CMakeLists.txt  rtc_demo.c
tbird/: CMakeLists.txt  led_out.c  sw_in.c  sw_in.h  tbird_fsm.c  tbird_fsm.h  tbird_main.c  timer.h
tft_demo/: CMakeLists.txt  tft_demo.c
tft_master/: CMakeLists.txt  TFT_PIO.c
timer/: CMakeLists.txt  timer.c  timer_demo.c
touchscreen_demo/: CMakeLists.txt  TouchScreen.c  TouchScreen.h  touchscreen_demo.c
uart_demo/: CMakeLists.txt  uart_demo.c
